k8s/bucketuploaderservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bucketuploader-deployment
spec:
  selector:
    matchLabels:
      app: bucketuploader-deployment
  template:
    metadata:
      labels:
        app: bucketuploader-deployment
    spec:
      containers:
        - name: server
          image: gabrielmougard/bucketserv:alpha
