k8s/rapgeneratorservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rapgeneratorservice
spec:
  selector:
    matchLabels:
      app: rapgeneratorservice
  template:
    metadata:
      labels:
        app: rapgeneratorservice
    spec:
      containers:
        - name: server
          image: rapgeneratorservice
          ports:
          - containerPort: 5000
          #readinessProbe: #WHEN GRPC WILL BE IMPLEMENTED
          #  exec:
          #    command: ["/bin/grpc_health_probe", "-addr=:5000"]
          #livenessProbe:
          #  exec:
          #    command: ["/bin/grpc_health_probe", "-addr=:5000"]
          resources:
            requests:
              cpu: 700m
              memory: 512Mi
            limits:
              cpu: 800m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: rapgeneratorservice
spec:
  type: ClusterIP
  selector:
    app: rapgeneratorservice
  ports:
  - port: 5000
    targetPort: 5000
