k8s/rapgo-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rapgo-ingress
spec:
  rules:
  - host: rapgo.io
    http:
      paths:
      - backend:
          serviceName: app-frontend-service
          servicePort: 80
  - host: data.rapgo.io
    http:
      paths:
      - backend:
          serviceName: ingest-frontend-service
          servicePort: 80
